umap/static/umap/css/form.css
/* ... */
button.flat,
[type="button"].flat {
    padding: 0;
    text-align: start;
    min-height: inherit;
    width: initial;
    display: initial;
}

button.flat,
[type="button"].flat,
.dark [type="button"].flat {
    border: none;
    background-color: inherit;
    color: var(--text-color);
}

button.flat:hover,
[type="button"].flat:hover,
.dark [type="button"].flat:hover {
    text-decoration: underline;
}

.dark button.round,
[type="button"].round,
button.round {
    border-radius: 20px;
    border: 0.5px solid rgba(153, 153, 153, 0.40);
}

.soft-round,
.dark button.soft-round,
button.soft-round {
    border-radius: var(--border-radius);
}

button.round.small {
    padding: var(--button-padding-small);
}

.help-text,
.helptext {
    display: block;
    padding: 7px 7px;
    margin-bottom: 14px;
    background: var(--color-mediumGray);
    color: var(--color-veryLightGray);
    font-size: 10px;
    border-radius: 0 2px;
}

.content .helptext {
    background-color: var(--color-veryLightGray);
    color: var(--color-dark);
}

input+.help-text {
    margin-top: -14px;
}

.formbox {
    min-height: 36px;
    margin-bottom: 14px;
    display: flex;
    flex-direction: column;
    gap: var(--gutter);
}

.formbox .formbox {
    margin-bottom: 0;
}

.formbox.with-switch {
    padding-top: 2px;
}

.with-switch {
    overflow: hidden;
}

fieldset.formbox {
    border: none;
    border-top: 1px solid var(--color-veryLightGray);
}

label {
    display: block;
    font-size: 12px;
    line-height: 21px;
    width: 100%;
}

label+label {
    margin-top: var(--box-margin);
}

.content label {
    font-weight: bold;
}

input[type="checkbox"]+label {
    display: inline;
    padding: 0 14px;
}

select+.error,
input+.error {
    display: block;
    padding: 7px 7px;
    margin-top: -14px;
    margin-bottom: 14px;
    background: var(--color-veryLightGray);
    color: var(--color-light);
    background-color: var(--color-red);
    font-size: 11px;
    border-radius: 0 2px;
}

input[type="file"]+.error {
    margin-top: 0;
}

input[value]:invalid {
    border-color: var(--color-red);
    background-color: var(--color-darkRed);
    color: var(--color-light);
}

.dark input,
.dark textarea {
    background-color: var(--color-darkerGray);
    border-color: var(--color-veryDarkGray);
    border-width: 1px;
    color: var(--color-veryLightGray);
}

details {
    margin-bottom: 5px;
    margin-top: 5px;
    border-start-start-radius: 4px;
    border-start-end-radius: 4px;
}

.dark details {
    border: 1px solid var(--color-veryDarkGray);
}

details fieldset {
    overflow: hidden;
    border: 1px solid var(--color-veryLightGray);
    margin: 0;
    padding: var(--text-margin);
}

details summary {
    cursor: pointer;
    background-color: var(--color-veryLightGray);
    font-size: 0.9rem;
    padding: var(--small-box-padding);
}

.dark details summary {
    background-color: var(--color-darkerGray);
    color: var(--color-light);
}

.dark details fieldset:not(.formbox) {
    border: 1px solid var(--color-darkGray);
}

summary h4 {
    display: inline;
}

fieldset legend {
    font-size: .9rem;
    padding: 0 5px;
}

fieldset.separator {
    border: none;
    border-top: 1px solid var(--color-veryLightGray);
}

[data-badge] {
    position: relative;
}

[data-badge]:after {
    position: absolute;
    inset-inline-end: -6px;
    top: -6px;
    min-width: 8px;
    min-height: 8px;
    line-height: 8px;
    padding: 2px;
    font-weight: bold;
    background-color: var(--color-accent);
    color: var(--color-darkBlue);
    text-align: center;
    font-size: .75rem;
    border-radius: 50%;
    content: attr(data-badge);
}

[hidden] {
    display: none !important;
}

/* Switch */
input.switch:empty {
    display: none;
}

input.switch:empty~label {
    white-space: nowrap;
    position: relative;
    float: inline-start;
    line-height: 2em;
    height: 2em;
    text-indent: 6em;
    margin: 0.2em 0;
    cursor: pointer;
    user-select: none;
    text-shadow: 0 1px rgba(0, 0, 0, 0.1);
    width: 80px;
}

input.switch:empty~label:before,
input.switch:empty~label:after {
    position: absolute;
    display: block;
    top: 0;
    bottom: 0;
    inset-inline-start: 0;
    content: ' ';
    width: 6em;
    -webkit-transition: all 100ms ease-in;
    transition: all 100ms ease-in;
    color: var(--color-mediumGray);
    font-weight: bold;
    background-color: var(--color-veryLightGray);
}

.dark input.switch:empty~label:before,
.dark input.switch:empty~label:after {
    background-color: var(--color-darkerGray);
}

input.switch:empty~label:after {
    width: 3em;
    margin-inline-start: 0.1em;
    background-color: var(--color-lightGray);
    content: "OFF";
    text-indent: 3.5em;
    border: 1px solid var(--color-darkerGray);
    font-weight: bold;
}

.dark input.switch:empty~label:after {
    border: 1px solid var(--color-veryDarkGray);
    background-color: var(--color-darkerGray);
    color: var(--color-veryLightGray);
}

input.switch:checked:empty~label:after {
    content: ' ';
}

.dark input.switch:checked~label:before,
input.switch:checked~label:before {
    background-color: var(--color-verySoftCyan);
    border: 1px solid var(--color-veryLightGray);
    color: var(--color-darkGray);
    content: "ON";
    text-indent: 0.7em;
    text-align: start;
    font-weight: bold;
}

.dark input.switch:checked~label:before {
    border: none;
    background-color: var(--color-verySoftCyan);
}

input.switch:checked~label:after {
    margin-inline-start: 3em;
}

.button-bar,
.umap-multiplechoice {
    margin-top: 5px;
    text-align: center;
    display: grid;
    width: 100%;
}

.button-bar {
    grid-gap: var(--gutter);
}

.umap-multiplechoice.by2,
.button-bar.by2,
.button-bar.half {
    grid-template-columns: 1fr 1fr;
    justify-items: center;
    width: calc(100% - var(--gutter) * 2);
}
/* ... */

